add dataset and scripts to generate it from the raw data

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
-torch
+numpy>=1.24.4
+torch>=2.0.0
 torchvision
-torchaudio
-numpy
 matplotlib
 pandas
-jupyter
+datasets
+transformers
+seaborn
+scikit-learn
+python-Levenshtein
+nltk
+rouge
+fastapi
+uvicorn
+torchmetrics
